# re_dms

./: .dockerignore  .gitignore  .tool-versions  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  hosts.example  re_dms.yml  re_wald.rb
roles/cloudwatch/files/: dead_tuple_percentages.sh  dead_tuple_percentages.sql  example_cloudwatch.json  measure_age_of_oldest_wal_file.sh  measure_age_of_youngest_wal_file.sh  measure_number_of_processes_owned_by_re_dms.sh  measure_number_of_re_dms_processes.sh  measure_number_of_wal_files.sh  replication_slot_lag.sh  replication_slot_lag.sql  tx_measure_age_of_oldest_wal_file.sh  tx_measure_age_of_youngest_wal_file.sh  tx_measure_number_of_wal_files.sh  vacuum_analyze.sh
roles/cloudwatch/tasks/: main.yml
roles/cloudwatch/templates/: credentials_template.j2
roles/pg_recvlogical/defaults/: main.yml
roles/pg_recvlogical/files/: pg_recvlogical.conf.example  pg_recvlogical.service  replication.target
roles/pg_recvlogical/handlers/: main.yml
roles/pg_recvlogical/tasks/: main.yml
roles/pg_recvlogical/templates/: pg_recvlogical.service
roles/pg_recvlogical/tests/: test.yml
roles/pg_recvlogical/vars/: main.yml
roles/re_dms/defaults/: main.yml
roles/re_dms/files/: re_dms.conf.example  re_dms.service  transactions_re_dms.service
roles/re_dms/handlers/: main.yml
roles/re_dms/tasks/: main.yml
roles/re_dms/templates/: re_dms.service  re_dms.socket
roles/re_dms/tests/: test.yml
roles/re_dms/vars/: main.yml
src/: change_processing.rs  database_writer.rs  database_writer_threads.rs  exponential_backoff.rs  file_uploader.rs  file_uploader_stream.rs  file_uploader_threads.rs  file_writer.rs  input_manager.rs  logger.rs  main.rs  parser.rs  shutdown_handler.rs  targets_tables_column_names.rs  transaction_filter.rs  wal_file_manager.rs
test/: parser.txt  parser_commit_bug.txt  parser_null_newline_bug.txt  same_bytes_swap_wal.txt
