[package]
name = "re_dms"
version = "0.1.0"
authors = ["Michael Hauser-Raspe <michael@meetcleo.com>"]
edition = "2018"


[features]

# Feature names must not conflict with other package names in the manifest. This is because they are opted into via features = [...], which only has a single namespace.
with_rollbar = ["rollbar", "backtrace"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# let's include debug info in our release builds
# https://stackoverflow.com/questions/38803760/how-to-get-a-release-build-with-debugging-information-when-using-cargo
[profile.release]
debug = true

[dependencies]
# general purpose tools
itertools = "0.9"
lazy_static = "1.4.0"
regex = "1.4.2"
either = "1.6.1"
log = "0.4.0"
env_logger = "0.8.2"
csv = "1.1"
glob = "0.3.0"
bigdecimal = "0.2.0"
num-bigint = "0.3.0" # same version as used in bigdecimal above

# dotenv
dotenv = "0.15.0"

# s3
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
# rusoto uses tokio 0.2, try it for now
# if we need another, look into
# https://github.com/tokio-rs/tokio-compat

# little argparsing lib
clap = "2.33.3"

# gzipping
flate2 = "1.0.19"

# async
# highest tokio version that rusoto supports
# TODO: think about tokio_compat / or switch to 
tokio = { version = "0.2.9", features = ["full"] }
# gotta stream those files to s3
# let's get async up in here
tokio-util = {version = "0.3.1", features = ["codec"] }
futures = "0.3.1"

# backoff
backoff = {version = "0.2.1", features = ["tokio"]}

# string internment
internment = "0.4.1"

# db connections
# these are specific versions chosen to work with the tokio version above
deadpool-postgres = { version = "0.5.6" }
tokio-postgres = { version = "0.5.1", features = ["with-uuid-0_8"] }
postgres-openssl = "0.3.0"
openssl = "0.10"

# serialisation
serde = "1.0.117"
config = "0.10.1"

# hashmap literal macro
maplit = "1.0.2"

# linux stuff
nix = "0.19.1"
signal-hook = "0.3.4"

rollbar = { version = "0.7.0", optional = true }
backtrace = { version = "0.3.56", optional = true }

[dev_dependencies]
mock_instant = { version = "0.2", features = ["sync"] }
# so we can have things running globally before our tests.
ctor = "0.1.16"
