[package]
name = "re_dms"
version = "0.1.0"
authors = ["Michael Hauser-Raspe <michael@meetcleo.com>"]
edition = "2018"


[features]

# Feature names must not conflict with other package names in the manifest. This is because they are opted into via features = [...], which only has a single namespace.
with_sentry = ["sentry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# let's include debug info in our release builds
# https://stackoverflow.com/questions/38803760/how-to-get-a-release-build-with-debugging-information-when-using-cargo
[profile.release]
debug = true

[profile.bench]
debug = true

[dependencies]
# general purpose tools
itertools = "0.9"
lazy_static = "1.4.0"
regex = "1.4.2"
either = "1.6.1"
log = "0.4.0"
env_logger = "0.8.2"
csv = "1.1"
glob = "0.3.0"
bigdecimal = "0.2.0"
num-bigint = "0.3.3" # same version as used in bigdecimal above

# dotenv
dotenv = "0.15.0"

# s3
aws-config = "1.1.7"
aws-sdk-s3 = "1.92.0"

# little argparsing lib
clap = "2.33.3"

# gzipping
flate2 = "1.0.19"

# async
tokio = { version = "1.35.1", features = ["full"] }
# gotta stream those files to s3
# let's get async up in here
tokio-util = {version = "0.7.10", features = ["codec"] }
futures = "0.3.23"

# backoff
backoff = {version = "0.4.0", features = ["tokio"]}

# string internment
internment = "0.4.1"

# db connections
# these are specific versions chosen to work with the tokio version above
deadpool-postgres = { version = "0.12.1", features = ["serde"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-0_8"] }
postgres-openssl = "0.5.0"
openssl = "0.10"

# serialisation
serde = "1.0.117"
config = "0.15"

# hashmap literal macro
maplit = "1.0.2"

# linux stuff
nix = "0.19.1"
signal-hook = "0.3.4"

# recording query durations
dogstatsd = "0.6.2"

sentry = { version = "0.32.1", optional = true }

[dev-dependencies]
mock_instant = { version = "0.2", features = ["sync"] }
# so we can have things running globally before our tests.
ctor = "0.1.16"
